# gantt-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  VISION.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: cache-warm.yml  release.yml
docs/: project.json  project_llm.json  system-index.md
docs/plans/: 2026-03-30-file-persistence.md  2026-03-30-foundation-and-layout.md  2026-03-30-gantt-chart-implementation.md  2026-03-30-nested-sub-gantt.md  2026-03-30-priority-pane.md  2026-03-30-quality-of-life.md  2026-03-30-store-extraction.md  2026-03-30-todos-and-kanban.md  2026-03-31-tauri-port.md  2026-04-02-llm-export.md  2026-04-05-drag-reorder.md
scripts/: build-cli.ts  gantt.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: gantt-cli.cjs
src-tauri/src/: main.rs
src/lib/: types.ts
src/lib/components/: app-sidebar.svelte  command-palette.svelte  detail-pane.svelte  gantt-bar.svelte  gantt-chart.svelte  gantt-dependency.svelte  gantt-grid.svelte  gantt-header.svelte  gantt-milestone.svelte  gantt-pane.svelte  gantt-task-list.svelte  gantt-task-row.svelte  gantt-timeline.svelte  gantt-today-marker.svelte  kanban-board.svelte  kanban-card.svelte  kanban-column.svelte  mode-toggle.svelte  priority-pane.svelte  task-create-dialog.svelte  whats-new-dialog.svelte
src/lib/stores/dialog/: dialogStore.svelte.ts
src/lib/stores/gantt/: ganttStore.svelte.ts  helpers.ts  index.ts  models.ts
src/lib/stores/history/: index.ts  (+1 more)
src/lib/utils/: timeline.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
(+20 files in other folders)
