[package]
name = "gantt-app"
version = "0.1.0"
description = "A Gantt chart project management tool"
authors = ["you"]
license = ""
repository = ""
default-run = "gantt-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gantt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gantt-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
